--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -27,4 +27,18 @@ jdbc.url						= jdbc:oracle:thin:@192.168.1.236:1521:psjava
 jdbc.user						= PSIWEB
 jdbc.password					= VW1wU2FXTnFSbXBPUXpWWVRUSkpkVkpFVG5wT1FUMDk=
 
+# AfilaServices - url,user,pass
+#-----------------------------------------------------------------------------------------
+afilia.service.refbanc.url				= http://192.168.1.235:7373/afilia-services/service/afiliacion/pago/banco/referencia/
+afilia.service.user						= afilia-services
+afilia.service.pass						= 4f1l14s3rv1c3sPS
+
+# AfilaUtils - urlLiberacion,user,pass
+#-----------------------------------------------------------------------------------------
+#afUtils.service.liberacion.url				= http://192.168.1.110:7171/afilUtils/update/liberacionCorreo/
+#afUtils.service.user						= aplccnDpstsBnc
+#afUtils.service.pass						= 4pl1c4c10nD3p0s1t0sB4nc0
+afUtils.service.liberacion.url				= http://localhost:8080/appps/update/liberacionCorreo/
+afUtils.service.user						= appps
+afUtils.service.pass						= 123
 
