--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -20,28 +20,31 @@ logging.level.com.portal.app    = DEBUG
 
 # Base de datos
 #-----------------------------------------------------------------------------------------
-#jdbc.packages					= com.portal.app.dto
-#jdbc.show.sql					= true
-#jdbc.name						= PSJAVA
-#jdbc.url						= jdbc:oracle:thin:@192.168.1.236:1521:psjava
-#jdbc.user						= PSIWEB
-#jdbc.password					= VW1wU2FXTnFSbXBPUXpWWVRUSkpkVkpFVG5wT1FUMDk=
-
 jdbc.packages					= com.portal.app.dto
 jdbc.show.sql					= true
-jdbc.name						= PSCARTASWEB_NEW
-jdbc.url						= jdbc:oracle:thin:@(DESCRIPTION =(ADDRESS = (PROTOCOL = TCP)(HOST = 192.168.1.82)(PORT = 1521))(ADDRESS = (PROTOCOL = TCP)(HOST = 192.168.1.83)(PORT = 1521))(ADDRESS = (PROTOCOL = TCP)(HOST = 192.168.1.84)(PORT = 1521))(LOAD_BALANCE = YES)(CONNECT_DATA =(SERVER = DEDICATED)(SERVICE_NAME = PSCARTASWEB)))
+jdbc.name						= PSJAVA
+jdbc.url						= jdbc:oracle:thin:@192.168.1.236:1521:psjava
 jdbc.user						= PSIWEB
-jdbc.password					= VW1wU2FXTnFSbXBPUXpWWVRUSkpkVlJxVGpOTWF6QXdZek5SZW1OblBUMD0=
+jdbc.password					= VW1wU2FXTnFSbXBPUXpWWVRUSkpkVkpFVG5wT1FUMDk=
+
+#jdbc.packages					= com.portal.app.dto
+#jdbc.show.sql					= true
+#jdbc.name						= PSCARTASWEB_NEW
+#jdbc.url						= jdbc:oracle:thin:@(DESCRIPTION =(ADDRESS = (PROTOCOL = TCP)(HOST = 192.168.1.82)(PORT = 1521))(ADDRESS = (PROTOCOL = TCP)(HOST = 192.168.1.83)(PORT = 1521))(ADDRESS = (PROTOCOL = TCP)(HOST = 192.168.1.84)(PORT = 1521))(LOAD_BALANCE = YES)(CONNECT_DATA =(SERVER = DEDICATED)(SERVICE_NAME = PSCARTASWEB)))
+#jdbc.user						= PSIWEB
+#jdbc.password					= VW1wU2FXTnFSbXBPUXpWWVRUSkpkVlJxVGpOTWF6QXdZek5SZW1OblBUMD0=
 
 # AfilaServices - url,user,pass
 #-----------------------------------------------------------------------------------------
 afilia.service.base.url				= http://localhost:8080/appps/service/
+afilia.service.user					= appps
+afilia.service.pass					= 123
+#afilia.service.base.url				= http://192.168.1.235:7373/afilia-services/service/
+#afilia.service.user					= afilia-services
+#afilia.service.pass					= 4f1l14s3rv1c3sPS
 afilia.service.refbanc.url			= afiliacion/pago/banco/referencia/
 afilia.service.pedido.url			= afiliacion
 afilia.service.cobertura.url		= paqueteria/cobertura
-afilia.service.user					= appps
-afilia.service.pass					= 123
 
 # AfilaUtils - urlLiberacion,user,pass
 #-----------------------------------------------------------------------------------------
