--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -29,16 +29,18 @@ jdbc.password					= VW1wU2FXTnFSbXBPUXpWWVRUSkpkVlJxVGpOTWF6QXdZek5SZW1OblBUMD0=
 
 # AfilaServices - url,user,pass
 #-----------------------------------------------------------------------------------------
-afilia.service.base.url				= http://192.168.1.235:7373/afilia-services/service/afiliacion/
-afilia.service.pedido.url			= pago/banco/referencia/
-afilia.service.refbanc.url			= crear/pedido
+afilia.service.base.url				= http://192.168.1.235:7373/afilia-services/service/
 afilia.service.user					= afilia-services
 afilia.service.pass					= 4f1l14s3rv1c3sPS
+afilia.service.refbanc.url			= afiliacion/pago/banco/referencia/
+afilia.service.pedido.url			= afiliacion
+afilia.service.cobertura.url		= paqueteria/cobertura
 
 # AfilaUtils - urlLiberacion,user,pass
 #-----------------------------------------------------------------------------------------
 afUtils.service.liberacion.url				= http://192.168.1.110:7171/afilUtils/update/liberacionCorreo/
 afUtils.service.user						= aplccnDpstsBnc
 afUtils.service.pass						= 4pl1c4c10nD3p0s1t0sB4nc0
+
 
 
