Vrsn-Prod Export 1Nov21

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -45,6 +45,7 @@ afilia.service.pass					= 123
 afilia.service.refbanc.url			= afiliacion/pago/banco/referencia/
 afilia.service.pedido.url			= afiliacion
 afilia.service.cobertura.url		= paqueteria/cobertura
+afilia.service.cobertura.isTest		= false
 
 # AfilaUtils - urlLiberacion,user,pass
 #-----------------------------------------------------------------------------------------
