--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -35,6 +35,7 @@ afilia.service.pass					= 4f1l14s3rv1c3sPS
 afilia.service.refbanc.url			= afiliacion/pago/banco/referencia/
 afilia.service.pedido.url			= afiliacion
 afilia.service.cobertura.url		= paqueteria/cobertura
+afilia.service.cobertura.isTest		= false
 
 # AfilaUtils - urlLiberacion,user,pass
 #-----------------------------------------------------------------------------------------
