--- a/src/main/resources/application-qa.properties
+++ b/src/main/resources/application-qa.properties
@@ -34,6 +34,7 @@ afilia.service.pedido.url			= pago/banco/referencia/
 afilia.service.refbanc.url			= crear/pedido
 afilia.service.user					= afilia-services
 afilia.service.pass					= 4f1l14s3rv1c3sPS
+afilia.service.cobertura.isTest		= false
 
 # AfilaUtils - urlLiberacion,user,pass
 #-----------------------------------------------------------------------------------------
