WS RfcValid-UpdateSocio PsSocio 8Nov21

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,5 +1,6 @@
 server.ip						= localhost
-server.port						= 7171
+#server.port						= 7171
+server.port						= 8080
 spring.devtools.add-properties	= false
 server.servlet.contextPath		= /appps
 app.user						= appps@123:APPLICATION
@@ -56,3 +57,4 @@ afUtils.service.liberacion.url				= http://localhost:8080/appps/update/liberacio
 afUtils.service.user						= appps
 afUtils.service.pass						= 123
 
+mercado.pago.plugin	=	http://odc.portalweb.priceshoes.com/fsw/mercadopago-dev/app/js/mpps-dev.js
