--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -43,5 +43,6 @@ afUtils.service.liberacion.url				= http://192.168.1.110:7171/afilUtils/update/l
 afUtils.service.user						= aplccnDpstsBnc
 afUtils.service.pass						= 4pl1c4c10nD3p0s1t0sB4nc0
 
+mercado.pago.plugin	=	http://odc.portalweb.priceshoes.com/fsw/mercadopago/app/js/mpps.min.js
 
 
