--- a/src/main/resources/application-qa.properties
+++ b/src/main/resources/application-qa.properties
@@ -45,3 +45,5 @@ afUtils.service.liberacion.url				= http://localhost:8080/appps/update/liberacio
 afUtils.service.user						= appps
 afUtils.service.pass						= 123
 
+mercado.pago.plugin	=	http://odc.portalweb.priceshoes.com/fsw/mercadopago-dev/app/js/mpps-dev.js
+
