--- a/src/main/resources/application-qa.properties
+++ b/src/main/resources/application-qa.properties
@@ -1,5 +1,6 @@
 server.ip						= 172.20.1.24
-server.port						= 7171
+#server.port						= 7171
+server.port						= 8081
 spring.devtools.add-properties	= false
 server.servlet.contextPath		= /bitacoradigitalQA
 app.user						= bitdigqa@b1td16q4:APPLICATION
@@ -29,11 +30,12 @@ jdbc.password					= VW1wU2FXTnFSbXBPUXpWWVRUSkpkVkpFVG5wT1FUMDk=
 
 # AfilaServices - url,user,pass
 #-----------------------------------------------------------------------------------------
-afilia.service.base.url				= http://192.168.1.235:7373/afilia-services/service/afiliacion/
-afilia.service.pedido.url			= pago/banco/referencia/
-afilia.service.refbanc.url			= crear/pedido
+afilia.service.base.url				= http://192.168.1.235:7373/afilia-services/service/
 afilia.service.user					= afilia-services
 afilia.service.pass					= 4f1l14s3rv1c3sPS
+afilia.service.refbanc.url			= afiliacion/pago/banco/referencia/
+afilia.service.pedido.url			= afiliacion
+afilia.service.cobertura.url		= paqueteria/cobertura
 afilia.service.cobertura.isTest		= false
 
 # AfilaUtils - urlLiberacion,user,pass
