--- a/src/main/resources/application-qa.properties
+++ b/src/main/resources/application-qa.properties
@@ -30,9 +30,9 @@ jdbc.password					= VW1wU2FXTnFSbXBPUXpWWVRUSkpkVkpFVG5wT1FUMDk=
 
 # AfilaServices - url,user,pass
 #-----------------------------------------------------------------------------------------
-afilia.service.base.url				= http://192.168.1.235:7373/afilia-services/service/
-afilia.service.user					= afilia-services
-afilia.service.pass					= 4f1l14s3rv1c3sPS
+afilia.service.base.url				= http://192.168.1.234:7171/afiliapsQA/service/
+afilia.service.user					= appps
+afilia.service.pass					= 123
 afilia.service.refbanc.url			= afiliacion/pago/banco/referencia/
 afilia.service.pedido.url			= afiliacion
 afilia.service.cobertura.url		= paqueteria/cobertura
