Rfc Digital,Reactivacion Email-Sms-Bitacora 29Nov21

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -58,3 +58,17 @@ afUtils.service.user						= appps
 afUtils.service.pass						= 123
 
 mercado.pago.plugin	=	http://odc.portalweb.priceshoes.com/fsw/mercadopago-dev/app/js/mpps-dev.js
+
+
+sms.url.service	=	http://192.168.1.235:7474/sms/smsRestWS/
+sms.user		=	PortalWeb
+sms.key			=	portalweb
+
+# SMS - url,user,pass,urlCredencial
+#-----------------------------------------------------------------------------------------
+sms.url.service	=	http://192.168.1.235:7474/sms/smsRestWS/
+sms.url.cred	=	http://localhost:7171/afiliaLocal/public/credencial?data=
+sms.user		=	PortalWeb
+sms.key			=	portalweb
+
+
