--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -45,4 +45,10 @@ afUtils.service.pass						= 4pl1c4c10nD3p0s1t0sB4nc0
 
 mercado.pago.plugin	=	http://odc.portalweb.priceshoes.com/fsw/mercadopago/app/js/mpps.min.js
 
+# SMS - url,user,pass,urlCredencial
+#-----------------------------------------------------------------------------------------
+sms.url.service	=	http://192.168.1.235:7474/sms/smsRestWS/
+sms.user		=	PortalWeb
+sms.key			=	portalweb
+sms.url.cred	=	http://afilia.portalweb.priceshoes.com/p/c?data=
 
