--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,16 @@
 			<version>${swagger.version}</version>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>priceshoes.fabricaweb</groupId>
+			<artifactId>psmailsender</artifactId>
+			<version>1.0.0</version>
+		</dependency>
 		
 		
 	</dependencies>
