--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -64,11 +64,12 @@ sms.url.service	=	http://192.168.1.235:7474/sms/smsRestWS/
 sms.user		=	PortalWeb
 sms.key			=	portalweb
 
-# SMS - url,user,pass,urlCredencial
+# SMS - url,user,pass,urlCredencial,TemplateMsj
 #-----------------------------------------------------------------------------------------
-sms.url.service	=	http://192.168.1.235:7474/sms/smsRestWS/
-sms.url.cred	=	http://localhost:7171/afiliaLocal/public/credencial?data=
-sms.user		=	PortalWeb
-sms.key			=	portalweb
+sms.url.service			=	http://192.168.1.235:7474/sms/smsRestWS/
+sms.url.cred			=	http://localhost:7171/afiliaLocal/public/credencial?data=
+sms.user				=	PortalWeb
+sms.key					=	portalweb
+sms.template.confirm	= 	Bienvenido a PriceShoes, este es su numero de confirmacion: %d
 
 
