--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -47,8 +47,8 @@ mercado.pago.plugin	=	http://odc.portalweb.priceshoes.com/fsw/mercadopago/app/js
 
 # SMS - url,user,pass,urlCredencial
 #-----------------------------------------------------------------------------------------
-sms.url.service	=	http://192.168.1.235:7474/sms/smsRestWS/
-sms.user		=	PortalWeb
-sms.key			=	portalweb
-sms.url.cred	=	http://afilia.portalweb.priceshoes.com/p/c?data=
-
+sms.url.service			=	http://192.168.1.235:7474/sms/smsRestWS/
+sms.user				=	PortalWeb
+sms.key					=	portalweb
+sms.url.cred			=	http://afilia.portalweb.priceshoes.com/p/c?data=
+sms.template.confirm	= 	Bienvenido a PriceShoes, este es su numero de confirmacion: %d
