--- a/src/main/resources/application-qa.properties
+++ b/src/main/resources/application-qa.properties
@@ -51,7 +51,8 @@ mercado.pago.plugin	=	http://odc.portalweb.priceshoes.com/fsw/mercadopago-dev/ap
 
 # SMS - url,user,pass,urlCredencial
 #-----------------------------------------------------------------------------------------
-sms.url.service	=	http://192.168.1.235:7474/sms/smsRestWS/
-sms.user		=	PortalWeb
-sms.key			=	portalweb
-sms.url.cred	=	http://172.20.1.24:7171/afiliaQA/public/credencial?data=
+sms.url.service			=	http://192.168.1.235:7474/sms/smsRestWS/
+sms.user				=	PortalWeb
+sms.key					=	portalweb
+sms.url.cred			=	http://172.20.1.24:7171/afiliaQA/public/credencial?data=
+sms.template.confirm	= 	Bienvenido a PriceShoes, este es su numero de confirmacion: %d
