--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active			=	local
+spring.profiles.active			=	qa
 spring.application.name			=	Registro de Bitacora Digital de Pagina 
 spring.mvc.view.prefix			=	/WEB-INF/views/
 spring.mvc.view.suffix			=	.jsp
@@ -6,7 +6,7 @@ spring.http.encoding.charset	=   UTF-8
 server.tomcat.uri-encoding  	=	UTF-8
 spring.devtools.livereload.enabled = true
 #server.jsp-servlet.init-parameters.development=true
-spring.devtools.restart.additional-paths[=.
+spring.devtools.restart.additional-paths=.
 
 app.name		=	Registro Bitacora Digital
 app.desc		=	Api para registro de bitacora digital de afiliaciones del nuevo sitio Priceshoes
