--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -21,19 +21,19 @@ logging.level.com.portal.app    = DEBUG
 
 # Base de datos
 #-----------------------------------------------------------------------------------------
-jdbc.packages					= com.portal.app.dto
-jdbc.show.sql					= true
-jdbc.name						= PSJAVA
-jdbc.url						= jdbc:oracle:thin:@192.168.1.236:1521:psjava
-jdbc.user						= PSIWEB
-jdbc.password					= VW1wU2FXTnFSbXBPUXpWWVRUSkpkVkpFVG5wT1FUMDk=
-
 #jdbc.packages					= com.portal.app.dto
 #jdbc.show.sql					= true
-#jdbc.name						= PSCARTASWEB_NEW
-#jdbc.url						= jdbc:oracle:thin:@(DESCRIPTION =(ADDRESS = (PROTOCOL = TCP)(HOST = 192.168.1.82)(PORT = 1521))(ADDRESS = (PROTOCOL = TCP)(HOST = 192.168.1.83)(PORT = 1521))(ADDRESS = (PROTOCOL = TCP)(HOST = 192.168.1.84)(PORT = 1521))(LOAD_BALANCE = YES)(CONNECT_DATA =(SERVER = DEDICATED)(SERVICE_NAME = PSCARTASWEB)))
+#jdbc.name						= PSJAVA
+#jdbc.url						= jdbc:oracle:thin:@192.168.1.236:1521:psjava
 #jdbc.user						= PSIWEB
-#jdbc.password					= VW1wU2FXTnFSbXBPUXpWWVRUSkpkVlJxVGpOTWF6QXdZek5SZW1OblBUMD0=
+#jdbc.password					= VW1wU2FXTnFSbXBPUXpWWVRUSkpkVkpFVG5wT1FUMDk=
+
+jdbc.packages					= com.portal.app.dto
+jdbc.show.sql					= true
+jdbc.name						= PSCARTASWEB_NEW
+jdbc.url						= jdbc:oracle:thin:@(DESCRIPTION =(ADDRESS = (PROTOCOL = TCP)(HOST = 192.168.1.82)(PORT = 1521))(ADDRESS = (PROTOCOL = TCP)(HOST = 192.168.1.83)(PORT = 1521))(ADDRESS = (PROTOCOL = TCP)(HOST = 192.168.1.84)(PORT = 1521))(LOAD_BALANCE = YES)(CONNECT_DATA =(SERVER = DEDICATED)(SERVICE_NAME = PSCARTASWEB)))
+jdbc.user						= PSIWEB
+jdbc.password					= VW1wU2FXTnFSbXBPUXpWWVRUSkpkVlJxVGpOTWF6QXdZek5SZW1OblBUMD0=
 
 # AfilaServices - url,user,pass
 #-----------------------------------------------------------------------------------------
