--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active			=	prod
+spring.profiles.active			=	local
 spring.application.name			=	Registro de Bitacora Digital de Pagina 
 spring.mvc.view.prefix			=	/WEB-INF/views/
 spring.mvc.view.suffix			=	.jsp
