Eliminacion foto ssh, comprobante dom update

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -59,11 +59,6 @@ afUtils.service.pass						= 123
 
 mercado.pago.plugin	=	http://odc.portalweb.priceshoes.com/fsw/mercadopago-dev/app/js/mpps-dev.js
 
-
-sms.url.service	=	http://192.168.1.235:7474/sms/smsRestWS/
-sms.user		=	PortalWeb
-sms.key			=	portalweb
-
 # SMS - url,user,pass,urlCredencial,TemplateMsj
 #-----------------------------------------------------------------------------------------
 sms.url.service			=	http://192.168.1.235:7474/sms/smsRestWS/
@@ -73,3 +68,10 @@ sms.key					=	portalweb
 sms.template.confirm	= 	Bienvenido a PriceShoes, este es su numero de confirmacion: %d
 
 
+
+# Ftp - Conexion al servidor para eliminacion de la foto del socio
+#-----------------------------------------------------------------------------------------
+ftp.url 		=	192.168.1.235
+ftp.user 		=	tomcat
+ftp.pass 		=	Ks2_*2Pz7/Bgf
+ftp.basepath 	=	/opt/dev/tomcat/static/imgs/socios/
