--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -52,3 +52,19 @@ sms.user				=	PortalWeb
 sms.key					=	portalweb
 sms.url.cred			=	http://afilia.portalweb.priceshoes.com/p/c?data=
 sms.template.confirm	= 	Bienvenido a PriceShoes, este es su numero de confirmacion: %d
+
+
+# Ftp - Conexion al servidor para eliminacion de la foto del socio
+#-----------------------------------------------------------------------------------------
+ftp.url 		=	192.168.1.235
+ftp.user 		=	tomcat
+ftp.pass 		=	Ks2_*2Pz7/Bgf
+ftp.basepath 	=	/opt/dev/tomcat/static/imgs/socios/
+
+
+
+
+
+
+
+
