--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,12 @@
 		    <version>2.11.0</version>
 		</dependency>
 		
+		<dependency>
+		    <groupId>com.jcraft</groupId>
+		    <artifactId>jsch</artifactId>
+		</dependency>
+		
+		
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
