--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -51,7 +51,7 @@ sms.url.service			=	http://192.168.1.235:7474/sms/smsRestWS/
 sms.user				=	PortalWeb
 sms.key					=	portalweb
 sms.url.cred			=	http://afilia.portalweb.priceshoes.com/p/c?data=
-sms.template.confirm	= 	Bienvenido a PriceShoes, este es su numero de confirmacion: %d
+sms.template.confirm	= 	Bienvenido a PriceShoes, este es su número de confirmación: %d
 
 
 # Ftp - Conexion al servidor para eliminacion de la foto del socio
