--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -62,10 +62,11 @@ mercado.pago.plugin	=	http://odc.portalweb.priceshoes.com/fsw/mercadopago-dev/ap
 # SMS - url,user,pass,urlCredencial,TemplateMsj
 #-----------------------------------------------------------------------------------------
 sms.url.service			=	http://192.168.1.235:7474/sms/smsRestWS/
-sms.url.cred			=	http://localhost:7171/afiliaLocal/public/credencial?data=
 sms.user				=	PortalWeb
 sms.key					=	portalweb
+sms.url.cred			=	http://afilia.portalweb.priceshoes.com/p/c?data=
 sms.template.confirm	= 	Bienvenido a PriceShoes, este es su numero de confirmacion: %d
+
 
 
 
