--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 		<java.version>1.8</java.version>
 		<spring-cloud.version>Greenwich.SR1</spring-cloud.version>
 		<hibernate.version>4.3.11.Final</hibernate.version>
-		<org.springframework.version> 4.2.5.RELEASE	</org.springframework.version>
+		<org.springframework.version> 4.2.5.RELEASE	</org.springframework.version>		
 		<swagger.version>2.9.2</swagger.version>
 	</properties>
 
@@ -50,6 +50,18 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<!-- TEST -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
 		</dependency>
 		
 		<dependency>
