--- a/src/main/resources/application-qa.properties
+++ b/src/main/resources/application-qa.properties
@@ -28,6 +28,14 @@ jdbc.url						= jdbc:oracle:thin:@192.168.1.236:1521:psjava
 jdbc.user						= PSIWEB
 jdbc.password					= VW1wU2FXTnFSbXBPUXpWWVRUSkpkVkpFVG5wT1FUMDk=
 
+#jdbc.packages					= com.portal.app.dto
+#jdbc.show.sql					= false
+#jdbc.name						= PSCARTASWEB_NEW
+#jdbc.url						= jdbc:oracle:thin:@(DESCRIPTION =(ADDRESS = (PROTOCOL = TCP)(HOST = 192.168.1.82)(PORT = 1521))(ADDRESS = (PROTOCOL = TCP)(HOST = 192.168.1.83)(PORT = 1521))(ADDRESS = (PROTOCOL = TCP)(HOST = 192.168.1.84)(PORT = 1521))(LOAD_BALANCE = YES)(CONNECT_DATA =(SERVER = DEDICATED)(SERVICE_NAME = PSCARTASWEB)))
+#jdbc.user						= PSIWEB
+#jdbc.password					= VW1wU2FXTnFSbXBPUXpWWVRUSkpkVlJxVGpOTWF6QXdZek5SZW1OblBUMD0=
+
+
 # AfilaServices - url,user,pass
 #-----------------------------------------------------------------------------------------
 afilia.service.base.url				= http://192.168.1.234:7171/afiliapsQA/service/
