Documentacion /  RFCPrice varios resultados

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -13,9 +13,9 @@ proxy.server					=	https://webservices.priceshoes.com/proxy/fsw/bitacora-digital
 # Log
 #-----------------------------------------------------------------------------------------
 logging.file					= /opt/dev/tomcat/7171/logs/bitdig/bitdib.log
-logging.file.max-history		= 2048
-logging.pattern.console         = %d %-5p [%c{1}] - %m %n
-logging.pattern.file            = %d{yyyy-MM-dd yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+logging.file.max-history		= 90
+logging.pattern.console         = 
+logging.pattern.file            = %d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 logging.level.com.portal.app    = INFO
 
 # Base de datos
